samples/_failures_safe/1761339310_95f523_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9958b633.c: In function ‘main’:
./samples/SAFE/__tmp_9958b633.c:167:16: error: missing terminating " character
  167 |         printf("Tokenization failed
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9958b633.c:167:9: error: expected expression at end of input
  167 |         printf("Tokenization failed
      |         ^~~~~~
./samples/SAFE/__tmp_9958b633.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9958b633.c:167:9: error: expected declaration or statement at end of input
